@@ -9,6 +9,16 @@ namespace AnimalEnumeration
 		ANIMALS_TOTAL
 	};
 
+	typedef enum ANIMAL_ATTRIBUTES
+	{
+		ANIMAL_FRAME_WIDTH = 0,
+		ANIMAL_FRAME_HEIGHT,
+		ANIMAL_FRAME_COUNT,
+		ANIMAL_FRAME_CENTER_OFFSET,
+		ANIMAL_WEIGHT,
+		ANIMAL_ATTRIBUTES_TOTAL
+	};
+
 	typedef enum ANIMAL_STATE
 	{
 		ANIMAL_UNBORN = 0,
