@@ -261,7 +261,7 @@ bool Graphics::drawSDLTexture(SDL_Texture* texture, int x, int y, int w, int h, 
 }
 
 //Renders a texture from the gTexture array which is clipped in Frames
-bool Graphics::drawFrameTexture(Texture* texture, int x, int y, int currentFrame, int currentRow, const int* FRAME_WIDTH, const int* FRAME_HEIGHT, bool useCamera)
+bool Graphics::drawFrameTexture(Texture* texture, int x, int y, int currentFrame, int currentRow, const int FRAME_WIDTH, const int FRAME_HEIGHT, bool useCamera)
 {
 	if (texture != NULL)
 	{
@@ -272,14 +272,14 @@ bool Graphics::drawFrameTexture(Texture* texture, int x, int y, int currentFrame
 		//Add camera offset if wanted
 		if (useCamera)
 		{
-			rSquare = { x - gCamera->getCameraX(), y - gCamera->getCameraY(), *FRAME_WIDTH, *FRAME_HEIGHT };
+			rSquare = { x - gCamera->getCameraX(), y - gCamera->getCameraY(), FRAME_WIDTH, FRAME_HEIGHT };
 		}
 		else
 		{
-			rSquare = { x, y, *FRAME_WIDTH, *FRAME_HEIGHT };
+			rSquare = { x, y, FRAME_WIDTH, FRAME_HEIGHT };
 		}
 
-		SDL_Rect rClip = { (currentFrame*(*FRAME_WIDTH)), 0, *FRAME_WIDTH, *FRAME_HEIGHT }; //Get the frame position and clip it
+		SDL_Rect rClip = { (currentFrame*FRAME_WIDTH), 0, FRAME_WIDTH, FRAME_HEIGHT }; //Get the frame position and clip it
 
 		SDL_RenderCopy(gRenderer, texture->getTexture(), &rClip, &rSquare);
 		return true;
@@ -291,7 +291,7 @@ bool Graphics::drawFrameTexture(Texture* texture, int x, int y, int currentFrame
 
 
 //Renders a texture from the gTexture array which is clipped in Frames and can be flipped
-bool Graphics::drawFrameTexture(Texture* texture, int x, int y, int currentFrame, int currentRow, const int* FRAME_WIDTH, const int* FRAME_HEIGHT, bool useCamera, bool flippedHorizontal)
+bool Graphics::drawFrameTexture(Texture* texture, int x, int y, int currentFrame, int currentRow, const int FRAME_WIDTH, const int FRAME_HEIGHT, bool useCamera, bool flippedHorizontal)
 {
 
 	if (texture != NULL)
@@ -315,14 +315,14 @@ bool Graphics::drawFrameTexture(Texture* texture, int x, int y, int currentFrame
 		//Add camera offset if wanted
 		if (useCamera)
 		{
-			rSquare = { x - gCamera->getCameraX(), y - gCamera->getCameraY(), *FRAME_WIDTH, *FRAME_HEIGHT };
+			rSquare = { x - gCamera->getCameraX(), y - gCamera->getCameraY(), FRAME_WIDTH, FRAME_HEIGHT };
 		}
 		else
 		{
-			rSquare = { x, y, *FRAME_WIDTH, *FRAME_HEIGHT };
+			rSquare = { x, y, FRAME_WIDTH, FRAME_HEIGHT };
 		}
 
-		SDL_Rect rClip = { (currentFrame*(*FRAME_WIDTH)), 0, *FRAME_WIDTH, *FRAME_HEIGHT }; //Get the frame position and clip it
+		SDL_Rect rClip = { (currentFrame*FRAME_WIDTH), 0, FRAME_WIDTH, FRAME_HEIGHT }; //Get the frame position and clip it
 
 		SDL_RenderCopyEx(gRenderer, texture->getTexture(), &rClip, &rSquare, 0, NULL, flip);
 
