@@ -9,6 +9,7 @@
 Tree::Tree(int x, int y, Graphics* graphics, Texture* texture, World* world, bool seeded, int id) : Entity(x, y, graphics, texture, world, id)
 {
 	using namespace TreeEnumeration;
+
 	//Spawn as a tiny seed or at a random size
 	if (seeded)
 	{
@@ -33,11 +34,14 @@ Tree::~Tree()
 //Renders the tree according to the 
 void Tree::render()
 {
+	using namespace TreeEnumeration;
+	using namespace TreeConstants;
+
 	calcFrame(0); //TODO call from outside
 	//color mod by worlds lighting
 	graphics->setTextureColorMod(texture, world->getRedColorMod(), world->getGreenColorMod(), world->getBlueColorMod());
 	//draw frame of the tree
-	graphics->drawFrameTexture(texture, (int)x, (int)y, currentFrame, 0, FRAME_WIDTH, FRAME_HEIGHT, true);
+	graphics->drawFrameTexture(texture, (int)x, (int)y, currentFrame, 0, TREE_VALUES[treeType][TREE_FRAME_WIDTH], TREE_VALUES[treeType][TREE_FRAME_WIDTH], true);
 
 }
 
@@ -77,6 +81,32 @@ void Tree::calcFrame(int framerate)
 			currentFrame = 4;
 			break;
 		}
+	}
+}
+
+//Lets animals move until they hit the ground, automatically adds gravity
+void Tree::handleCollisions(int framerate, Map* map)
+{
+
+	const int FRAME_WIDTH = TreeConstants::TREE_VALUES[treeType][TreeEnumeration::TREE_FRAME_WIDTH];
+	const int FRAME_HEIGHT = TreeConstants::TREE_VALUES[treeType][TreeEnumeration::TREE_FRAME_HEIGHT];
+	const int FRAME_CENTER_OFFSET = TreeConstants::TREE_VALUES[treeType][TreeEnumeration::TREE_FRAME_CENTER_OFFSET];
+
+	const int MAP_GROUND_HEIGHT = map->getGraphicalHeightSegment(map->getTileXFromPosition((int)x + FRAME_CENTER_OFFSET));
+
+	if (MAP_GROUND_HEIGHT <= y + FRAME_HEIGHT)
+	{
+		y = MAP_GROUND_HEIGHT - FRAME_HEIGHT;
+		forces.y = 0;
+	}
+	//Map border collision
+	if (x <= 0)
+	{
+		x = 0;
+	}
+	else if (x >= map->getMapWidth()*map->MAP_TILE_WIDTH_HEIGHT - FRAME_WIDTH)
+	{
+		x = map->getMapWidth()*map->MAP_TILE_WIDTH_HEIGHT - FRAME_WIDTH;
 	}
 }
 
