@@ -1,0 +1,9 @@
+#include "TreeEnumeration.h"
+
+namespace TreeConstants
+{
+	//These are the standard values for various trees, look in "TreeConstants.h" for the meaning of the indices
+	static const int TREE_VALUES[TreeEnumeration::TREES_TOTAL][TreeEnumeration::TREE_ATTRIBUTES_TOTAL] = {
+			{ 64, 64, 8, 20, 2000 }
+	};
+}
